[gd_scene load_steps=9 format=2]

[ext_resource path="res://hud/initial_hud.gd" type="Script" id=1]
[ext_resource path="res://assets/SportypoReguler-OVGwe.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/music/menu_music.wav" type="AudioStream" id=3]
[ext_resource path="res://levels/levels.tscn" type="PackedScene" id=4]
[ext_resource path="res://hud/icons8-roda-96.png" type="Texture" id=5]
[ext_resource path="res://hud/font_theme.tres" type="DynamicFont" id=7]

[sub_resource type="DynamicFont" id=2]
size = 72
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 58
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -688, -88 )
script = ExtResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="."]
z_index = -6
texture_scale = Vector2( 3, 3 )
texture_rotation_degrees = 1.7
polygon = PoolVector2Array( 0, 0, 1280, 0, 1280, 720, 0, 720 )

[node name="Polygon2D2" type="Polygon2D" parent="."]
position = Vector2( 16, 16 )
scale = Vector2( 0.975, 0.955555 )
z_index = -5
color = Color( 0.156863, 0.156863, 0.156863, 1 )
antialiased = true
texture_scale = Vector2( 3, 3 )
polygon = PoolVector2Array( 0, 0, 1280, 0, 1280, 720, 0, 720 )

[node name="view_car" type="ViewportContainer" parent="."]
margin_left = 680.0
margin_top = 48.0
margin_right = 1008.0
margin_bottom = 348.0
mouse_filter = 2

[node name="Viewport" type="Viewport" parent="view_car"]
size = Vector2( 300, 300 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3
gui_disable_input = true

[node name="c1" type="Camera" parent="view_car/Viewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.11552, 3.17833 )

[node name="cars" type="Spatial" parent="view_car/Viewport"]

[node name="view_track" type="ViewportContainer" parent="."]
margin_left = 680.0
margin_top = 328.0
margin_right = 1030.0
margin_bottom = 678.0
mouse_filter = 2

[node name="Viewport" type="Viewport" parent="view_track"]
size = Vector2( 350, 350 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3
gui_disable_input = true

[node name="c2" type="Camera" parent="view_track/Viewport"]
transform = Transform( 1, 0, 0, 0, 0.98516, 0.171637, 0, -0.171637, 0.98516, -7, 0.616659, 2.05712 )

[node name="levels" parent="view_track/Viewport" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -7, 0, 0 )

[node name="car" type="RichTextLabel" parent="."]
anchor_left = 0.056
anchor_top = 0.056
anchor_right = 0.094
anchor_bottom = 0.589
margin_left = 664.32
margin_top = 31.68
margin_right = 815.68
margin_bottom = -216.08
grow_vertical = 0
mouse_filter = 2
custom_colors/default_color = Color( 0.0823529, 0.921569, 0.964706, 1 )
custom_fonts/normal_font = ExtResource( 7 )
bbcode_enabled = true
bbcode_text = "[center][wave] 
CAR"
text = " 
CAR"

[node name="level" type="RichTextLabel" parent="."]
anchor_left = 0.056
anchor_top = 0.056
anchor_right = 0.094
anchor_bottom = 0.589
margin_left = 624.32
margin_top = 343.68
margin_right = 847.68
margin_bottom = 95.92
grow_vertical = 0
mouse_filter = 2
custom_colors/default_color = Color( 0.0823529, 0.921569, 0.964706, 1 )
custom_fonts/normal_font = ExtResource( 7 )
bbcode_enabled = true
bbcode_text = "[center][wave] 
LEVEL"
text = " 
LEVEL"

[node name="trick" type="RichTextLabel" parent="."]
anchor_left = 0.056
anchor_top = 0.056
anchor_right = 0.094
anchor_bottom = 0.589
margin_left = 64.32
margin_top = 39.68
margin_right = 383.68
margin_bottom = -192.08
grow_vertical = 0
mouse_filter = 2
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center][wave][rainbow freq=0.05] TRICK"
text = " TRICK"

[node name="racing" type="RichTextLabel" parent="."]
anchor_left = 0.056
anchor_top = 0.056
anchor_right = 0.094
anchor_bottom = 0.589
margin_left = 24.32
margin_top = 151.68
margin_right = 423.68
margin_bottom = -72.08
mouse_filter = 2
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center][wave][rainbow freq=0.05]
RACING"
text = "
RACING"

[node name="car_change" type="TextureButton" parent="."]
margin_left = 1056.0
margin_top = 200.0
margin_right = 1152.0
margin_bottom = 296.0
rect_pivot_offset = Vector2( 48, 48 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 5 )

[node name="track_change" type="TextureButton" parent="."]
margin_left = 1056.0
margin_top = 464.0
margin_right = 1152.0
margin_bottom = 560.0
rect_pivot_offset = Vector2( 48, 48 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 5 )

[node name="menu_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -5.0
autoplay = true

[node name="button_play" type="Control" parent="."]
anchor_left = 0.168
anchor_top = 0.245
anchor_right = 0.284
anchor_bottom = 0.445
margin_left = 192.96
margin_top = 415.6
margin_right = 356.48
margin_bottom = 383.6
mouse_default_cursor_shape = 2

[node name="arrow" type="Polygon2D" parent="button_play"]
visible = false
position = Vector2( -3209.15, -1050 )
scale = Vector2( 2.78572, 1.75 )
polygon = PoolVector2Array( 1152, 616, 1152, 632, 1152, 648, 1220.92, 648, 1220.92, 664, 1264, 632, 1220.92, 600, 1220.92, 616 )

[node name="play" type="RichTextLabel" parent="button_play"]
anchor_left = 0.45
anchor_top = 0.8
anchor_right = 0.5
anchor_bottom = 0.8
margin_left = -130.4
margin_top = -113.6
margin_right = 120.6
margin_bottom = 14.4
mouse_filter = 2
custom_colors/default_color = Color( 0.0823529, 0.921569, 0.964706, 1 )
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[center][wave] 
PLAY"
text = " 
PLAY"

[node name="play_butt" type="TextureButton" parent="button_play"]
anchor_left = 0.114
anchor_top = 0.759
anchor_right = 0.362
anchor_bottom = 0.853
margin_left = -35.568
margin_top = -69.008
margin_right = 199.056
margin_bottom = 0.464005
mouse_default_cursor_shape = 2

[connection signal="pressed" from="car_change" to="." method="_on_car_change_pressed"]
[connection signal="pressed" from="track_change" to="." method="_on_track_change_pressed"]
[connection signal="pressed" from="button_play/play_butt" to="." method="_on_play_butt_pressed"]
